# CML

./: .gitignore  CMakeLists.txt  databasemanager.cpp  databasemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  platformy.h  postep_ksiazki.h  sprawozdanie.tex
.claude/: settings.local.json
SQL/: 01_init_schema.sql  01_init_schemaV2.sql  01_init_schemaV3.sql  02_mock_data.sql  02_mock_dataV2.sql  03_Generowanie_Danych.sql  04_Dane_Pokaz.sql  1_Schemat_Bazy_Danych.sql  2_Generowanie_Danych.sql
controllers/: appcontroller.cpp  appcontroller.h
db/: databasemanager.cpp  databasemanager.h
models/: activity_statistics.h  aktywnosc_statystyki.h  historia.h  history.h  multimedia.h  platformy.h  postep.h  progress.h
ui/: categoriesdialog.cpp  categoriesdialog.h  categoriesdialog.ui  dashboardwidget.cpp  dashboardwidget.h  dashboardwidget.ui  detailswidget.cpp  detailswidget.h  detailswidget.ui  kategoriedialog.cpp  kategoriedialog.h  kategoriedialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  multimediaformwidget.cpp  multimediaformwidget.h  multimediaformwidget.ui  navigationpanelwidget.cpp  navigationpanelwidget.h  navigationpanelwidget.ui  panelnawigacjiwidget.cpp  panelnawigacjiwidget.h  panelnawigacjiwidget.ui  platformsdialog.cpp  platformsdialog.h  platformsdialog.ui  platformydialog.cpp  platformydialog.h  platformydialog.ui  statisticswidget.cpp  statisticswidget.h  statisticswidget.ui  szczegolywidget.cpp  szczegolywidget.h  szczegolywidget.ui  tagidialog.cpp  tagidialog.h  tagidialog.ui  tagsdialog.cpp  (+5 more)
